# web_scraping

./: README.md  pyproject.toml
11-08-2022/: Acreedores aceptan moratoria para deuda ucraniana de US$20.000 millones.txt  Argentina superará a Chile como segundo productor mundial de litio en el año 2028.txt  Bancolombia y Habi hacen alianza para facilitar los créditos de vivenda o de leasing.txt  Colombia es el octavo país con más poder adquisitivo per cápita en América Latina.txt  Con la prohibición del fracking, Colombia se perdería de $324 billones en 30 años.txt  Conozca para qué es apta la tierra en Colombia por actividad agrícola y agropecuaria.txt  Cuánto dinero se ganaría el Real Madrid por ganar la Supercopa de Europa.txt  Detectan contaminación potencial de carcinógeno en popular fármaco para diabetes.txt  Disney subirá las tarifas de su servicio de streaming y ofrecerá planes con publicidad.txt  Dólar cotiza por debajo de $4.300 y casas de cambio lo venden $76 más barato.txt  El Gobierno ahora buscaría que la tributaria sí se discuta en con mensaje de Urgencia.txt  El desarrollo del país va de la mano con el fortalecimiento del tejido empresarial.txt  El dólar cerró a $4.231,46 en promedio, con una disminución de $42 frente a la TRM.txt  El grueso de los impuestos viene de las empresas.txt  El hotel más caro de Nueva York ahora es Aman New York. Aquí hay un primer vistazo.txt  El impuesto saludable a ultraprocesados, y todos, los podemos revisar, dice Ocampo.txt  El petróleo avanza a medida que la AIE ve cambios en la proyección de la demanda.txt  (+29 more)
(+43 files in other folders)
