[tool.poetry]
name = "web_scraping"
version = "0.1.0"
description = ""
authors = ["NestorAlban <albquenes7294@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
lxml = "^4.9.1"
autopep8 = "^1.7.0"
selenium = "^4.4.0"
beautifulsoup4 = "^4.11.1"
bs4 = "^0.0.1"
PyUnitReport = "^0.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
